Refactor SecurityConfig to support dynamic CORS origins from properties